bug: contrast of main
A quick fix for the color contrast of the main content.

--- a/components/skip-to-nav-wc/css/main.css
+++ b/components/skip-to-nav-wc/css/main.css
@@ -1,5 +1,5 @@
 :root {
-  --color-main-background: rgba(255, 255, 255, 0.4);
+  --color-main-background: rgba(255, 255, 255, 0.6);
 
   --color-purple-90: #131021;
   --color-purple-80: #141035;
